--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 body {
     height: 100vh;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,7 +21,9 @@ body {
 
 
 .rating {
-    display: none;
+    position: absolute;
+    opacity: 0;
+    display: flex;
     justify-content: space-around;
     flex-direction: column;
     height: 500px;
@@ -29,9 +32,11 @@ body {
     border-radius: 20px;
     font-size: 15px;
     padding: 35px;
+    z-index: -5;
 }
 .rating.active {
-    display: flex;
+    opacity: 1;
+    z-index: 3;
 }
 
 .icon-star {
@@ -111,10 +116,13 @@ input:hover {
 /* -------------------- Page Thank You -------------------- */
 
 .thank {
-    display: none;
+    z-index: -1;
+    opacity: 0;
 }
 
 .thank.active {
+    position: absolute;
+    z-index: 1;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -125,6 +133,8 @@ input:hover {
     border-radius: 20px;
     font-size: 15px;
     padding: 50px 35px;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .thank svg {
